Feat: Add JWT authentication to SwaggerUI 2.0 definition
