# app/config/swagger.json
@@ -11,6 +11,10 @@
     "basePath": "/api",
     "tags": [
         {
+            "name": "auth",
+            "description": "Authentication related operations",
+        },
+        {
             "name": "user",
             "description": "Operations about user",
         }
@@ -23,7 +27,7 @@
 
         "/register": {
             "post": {
-                "tags": ["user"],
+                "tags": ["auth"],
                 "summary": "User Registration",
                 "description": "Registers a new user and stores their account information.",
                 "parameters": [
@@ -45,7 +49,7 @@
         },
         "/login": {
             "post": {
-                "tags": ["user"],
+                "tags": ["auth"],
                 "summary": "User Login",
                 "description": "Authenticates a user and returns a JWT token for session management.",
                 "parameters": [
@@ -66,9 +70,9 @@
             }
         },
 
-        "/user/request-reset-password": {
+        "/request-reset-password": {
             "post": {
-                "tags": ["user"],
+                "tags": ["auth"],
                 "summary": "Request a password reset link",
                 "description": "Sends a password reset link to the user's email.",
                 "operationId": "requestPasswordReset",
@@ -94,9 +98,9 @@
                 }
             }
         },
-        "/user/reset-password": {
+        "/reset-password": {
             "post": {
-                "tags": ["user"],
+                "tags": ["auth"],
                 "summary": "Reset user password",
                 "description": "Resets the user's password using a valid reset token.",
                 "operationId": "resetPassword",
@@ -118,26 +122,39 @@
                     },
                 }
             }
+        },
+
+        "/auth": {
+            "get": {
+                "tags": ["user"],
+                "summary": "Validate JWT Token",
+                "description": "Checks if the provided JWT token is valid and returns the authenticated user details.",
+                "produces": ["application/json"],
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully authenticated",
+                    },
+                    "401": {
+                        "description": "Invalid or missing token"
+                    }
+                }
+            }
         }
 
     },
 
-
     "securityDefinitions": {
         "api_key": {
             "type": "apiKey",
-            "name": "api_key",
-            "in": "header"
+            "name": "Authorization",
+            "in": "header",
+            "description": "Enter the token with the `Bearer: ` prefix, e.g. \"Bearer abcde12345\"."
         },
-        "petstore_auth": {
-            "type": "oauth2",
-            "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-            "flow": "implicit",
-            "scopes": {
-                "read:pets": "read your pets",
-                "write:pets": "modify pets in your account"
-            }
-        }
     },
 
     "definitions": {
@@ -278,7 +295,7 @@
                     }
                 }
             }
-        }
+        },
 
     },
 
@@ -286,5 +303,4 @@
         "description": "Find out how to create your private/public API keys",
         "url": "https://dev.mailjet.com/"
     }
-
 }
